blank prompt vs bin/Backup

--- a/.git-prompt.conf
+++ b/.git-prompt.conf
@@ -37,6 +37,8 @@ truncate_pwd=on
 # max_pwd_length=30
 # min_chars_per_pwd=1
 
+prompt_char="\n>"
+
 ###########################################################   ETC
 
 upcase_hostname=off
