--- a/.gitconfig
+++ b/.gitconfig
@@ -26,7 +26,7 @@
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)%Creset' --abbrev-commit
 [core]
         pager = less -FRSX
-        excludesfile = ~/.gitignore
+	excludesfile = /home/niklas/.gitignore_global
 #	autocrlf = input
 #	safecrlf = true
 [apply]
