--- a/.i3/config
+++ b/.i3/config
@@ -55,16 +55,16 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+$left move left
-bindsym $mod+Shift+$down move down
-bindsym $mod+Shift+$up move up
-bindsym $mod+Shift+$right move right
+bindsym $mod+Control+$left move left
+bindsym $mod+Control+$down move down
+bindsym $mod+Control+$up move up
+bindsym $mod+Control+$right move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Control+Left move left
+bindsym $mod+Control+Down move down
+bindsym $mod+Control+Up move up
+bindsym $mod+Control+Right move right
 
 # split in horizontal orientation
 bindsym $mod+b split h
@@ -81,7 +81,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Control+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -105,16 +105,16 @@ bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1
-bindsym $mod+Shift+2 move container to workspace number 2
-bindsym $mod+Shift+3 move container to workspace number 3
-bindsym $mod+Shift+4 move container to workspace number 4
-bindsym $mod+Shift+5 move container to workspace number 5
-bindsym $mod+Shift+6 move container to workspace number 6
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+Control+1 move container to workspace number 1
+bindsym $mod+Control+2 move container to workspace number 2
+bindsym $mod+Control+3 move container to workspace number 3
+bindsym $mod+Control+4 move container to workspace number 4
+bindsym $mod+Control+5 move container to workspace number 5
+bindsym $mod+Control+6 move container to workspace number 6
+bindsym $mod+Control+7 move container to workspace number 7
+bindsym $mod+Control+8 move container to workspace number 8
+bindsym $mod+Control+9 move container to workspace number 9
+bindsym $mod+Control+0 move container to workspace number 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
