--- a/.i3/config
+++ b/.i3/config
@@ -123,6 +123,15 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
+# thinkpad keys
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 1 -steps 3
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 1 -steps 3
+#bindsym XF86VolumeUp exec --no-startup-id amixer -- sset Master playback 2%+
+#bindsym XF86VolumeDown exec --no-startup-id amixer -- sset Master playback 2%-
+bindsym XF86AudioMute exec --no-startup-id amixer -- sset Master toggle
+bindsym XF86AudioMicMute exec --no-startup-id amixer -- sset Mic toggle
+bindsym XF86WLAN exec --no-startup-id amixer -- sset Mic toggle
+
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
