control volume thorugh pulseaudio

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,7 +1,7 @@
 separator_block_width=15
 
 [volume]
-command=/usr/local/libexec/i3blocks/volume
+command=~/bin/i3blocks/volume
 signal=10
 
 [memory]
