--- a/.i3/config
+++ b/.i3/config
@@ -152,11 +152,11 @@ bindsym $mod+r mode "resize"
 # thinkpad keys
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 1 -steps 3
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 1 -steps 3
-bindsym XF86AudioMicMute exec amixer -q set Mic toggle && pkill -USR1 i3blocks
-bindsym XF86WLAN exec --no-startup-id amixer -- sset Mic toggle
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute && pkill -USR1 i3blocks
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute && pkill -USR1 i3blocks
-bindsym XF86AudioMute exec amixer -q set Master toggle && pkill -USR1 i3blocks
+bindsym XF86AudioMicMute exec pactl set-source-mute 1 toggle && pkill -USR1 i3blocks
+#bindsym XF86WLAN exec --no-startup-id amixer -- sset Mic toggle
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -- -5% && pkill -USR1 i3blocks
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 -- +5% && pkill -USR1 i3blocks
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle && pkill -USR1 i3blocks
 bindsym $mod+F2 exec --no-startup-id i3lock -c 698157
 
 # Start i3bar to display a workspace bar (plus the system information i3status
