control volume thorugh pulseaudio

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -14,7 +14,7 @@ command=~/bin/dotfiles/i3blocks/brightness
 signal=10
 
 [volume]
-command=~/bin/dotfiles/i3blocks/volume
+command=~/bin/i3blocks/volume
 signal=10
 
 [memory]
