brighter warnings, matching to vim theme

--- a/.i3/config
+++ b/.i3/config
@@ -209,13 +209,12 @@ for_window [class="processing-core-PApplet"] floating enable
 
 # old eyes cannot see the subtle split indicator,so make it pink
 # class                 border  backgr. text    indicator
-client.focused          #4c7899 #285577 #ffffff #F42EE9
+client.focused          #4c7899 #005F87 #FFEFD9 #F42EE9
 client.focused_inactive #333333 #5f676a #ffffff #7B0975
 client.unfocused        #333333 #222222 #888888 #B31EAC
-client.urgent           #2f343a #900000 #ffffff #900000
+client.urgent           #2f343a #FF8700 #ffffff #FF8700
 
-exec --no-startup-id feh --bg-scale /home/niklas/bin/wallpaper
-
+exec --no-startup-id /home/niklas/bin/wallpaper
 
 # Start some applets
 exec dunst
