--- a/.i3/config
+++ b/.i3/config
@@ -224,9 +224,15 @@ exec redshift-gtk -l 52:13
 
 # Setttings
 exec --no-startup-id xrdb -merge /home/niklas/.Xresources
-exec --no-startup-id urxvtd -q -f -o
-exec compton -b --backend glx --paint-on-overlay
+exec urxvtd -q -f -o
+# disable touchpad while typing
+exec --no-startup-id syndaemon -i 3 -K -d
+# no composition because chrome makes sprite party
+#exec compton -b --backend glx --paint-on-overlay
 exec xmodmap /home/niklas/.Xmodmap
+# turn of coasting when scrolling with touchpad. Stop immediately
+# else: 1) scroll fast 2) stop touching pad 3) press ctrl (in browser) => zoom
+exec --no-startup-id xinput set-float-prop "SynPS/2 Synaptics TouchPad" "Synaptics Coasting Speed" 0 0
 
 # Start autocutsel to sync clipboards
 # 2014-01-03 annoying, cannot enter URLs on RTM, autoselecting fields overwrite selection
