how to connect to worachi

--- a/.ssh/config
+++ b/.ssh/config
@@ -118,6 +118,9 @@ Host puppetdashboard.lanpartei
 Host wigowyr
    HostName wigowyr.local
 
+Host worachi
+   IdentityFile ~/.ssh/pandur.key
+
 Host halde
    HostName halde.local
    User sturz
@@ -766,6 +769,7 @@ Host gruetz.clockwork.io
 
 Host plock.clockwork.io
   Hostname 89.238.65.38
+  IdentityFile ~/.ssh/pandur.key
 
 Host cataract-build
   HostName 127.0.0.1
