own host (TODO: dynamic?)

--- a/.git-prompt.conf
+++ b/.git-prompt.conf
@@ -26,7 +26,7 @@ git_module=on
 ###  Default objects are not displayed.  Example:
 
 default_user=niklas 		
-default_host="worachi"     		# remote host is always shown
+default_host="tywrath"     		# remote host is always shown
 default_domain="box43"	
 
 ###########################################################   PWD
