--- a/.ackrc
+++ b/.ackrc
@@ -2,14 +2,18 @@
 --type-set=haml=.haml
 --type-set=yaml=.yaml,.yml
 --type-set=puppet=.pp
---type-set=ruby=.rb,.erb,.rake
+--type-set=ruby=.rb,.erb,.rake,.haml
 --type-set=coffeescript=.coffee
 --type-set=sass=.scss,.sass
 --type-set=markdown=.md,.markdown
 --type-set=textile=.textile
 --type-set=handlebars=.handlebars
 --type-set=emblem=.emblem
+--type-set=elm=.elm
+--type-set=js=.js
+--type-set=log=.log
 --ignore-dir=public/upload/images/
 --ignore-dir=coverage/
 --ignore-dir=tmp/
 --ignore-dir=public/assets/
+--ignore-dir=dist/
