--- a/.ssh/config
+++ b/.ssh/config
@@ -2,7 +2,53 @@ Host fellmann
   HostName fellmann.dtdns.net
   User tails
 
-Host cataract.schnurr
+
+Host bitspire.de
+  User niklashofer
+  IdentityFile ~/.ssh/bitspire
+
+Host hijabvibe.production
+  HostName ec2-52-59-207-193.eu-central-1.compute.amazonaws.com
+  User ubuntu
+  IdentityFile ~/.ssh/bitspire
+
+Host finanzenverlag.staging2
+  HostName 35.157.100.54
+  User app
+  IdentityFile ~/.ssh/bitspire
+  ForwardAgent yes
+
+Host finanzenverlag.staging3
+  HostName 52.59.226.172
+  User app
+  IdentityFile ~/.ssh/bitspire
+  ForwardAgent yes
+
+
+Host finanzenverlag.production1
+  HostName ec2-54-93-187-132.eu-central-1.compute.amazonaws.com
+  User app
+  IdentityFile ~/.ssh/bitspire
+
+Host finanzenverlag.production2
+  HostName ec2-35-156-179-69.eu-central-1.compute.amazonaws.com
+  User app
+  IdentityFile ~/.ssh/bitspire
+
+Host finanzenverlag.production3
+  HostName ec2-52-59-206-32.eu-central-1.compute.amazonaws.com
+  User app
+  IdentityFile ~/.ssh/bitspire
+
+Host brandeins.production
+  Hostname 109.68.228.196
+  User magiclabs
+
+Host brandeins.staging
+  Hostname 134.119.10.1
+  User brandeins
+
+Host rtorrent.schnurr
   HostName schnurr.local
   Port 22147
   User torrent
