new lanpartei hosted apps

--- a/.ssh/config
+++ b/.ssh/config
@@ -60,6 +60,35 @@ Host minecraft.lanpartei
   User minecraft
   Port 22147
 
+Host lianeum.lanpartei.de
+  HostName lanpartei.de
+  User niklas
+  Port 22125
+
+Host git.lanpartei.de
+  HostName lanpartei.de
+  User niklas
+  Port 22109
+
+Host share.lanpartei.de
+  HostName lanpartei.de
+  Port 22108
+
+Host clockwork.lanpartei
+  HostName lanpartei.de
+  User niklas
+  Port 22107
+
+Host profhecht.lanpartei.de
+  HostName lanpartei.de
+  User niklas
+  Port 22124
+
+Host ts.lanpartei.de
+  HostName lanpartei.de
+  User ts
+  Port 22110
+
 Host puppetdashboard.lanpartei
   HostName lanpartei.de
   User niklas
