different other hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -187,10 +187,20 @@ Host betazett
    HostName 194.25.172.137
    IdentityFile ~/.ssh/pandur.key
 
-Host into-sa.com
-   HostName www.into-sa.com
+Host new.into-sa.com
+   HostName 89.238.84.42
+   User niklas
+   IdentityFile ~/.ssh/pandur.key
+
+Host old.into-sa.com
+   HostName lanpartei.de
    User intosa
    Port 22123
+
+Host staging.into-sa.com
+   HostName www.into-sa.com
+   User intosa
+   Port 22223
 
 Host vm
    User oneric
@@ -734,6 +744,17 @@ Host gruetz.clockwork.io
 Host plock.clockwork.io
   Hostname 89.238.65.38
 
+Host cataract-build
+  HostName 127.0.0.1
+  User vagrant
+  Port 2222
+  UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
+  PasswordAuthentication no
+  IdentityFile /home/niklas/Projects/Cataract/.vagrant/machines/default/virtualbox/private_key
+  IdentitiesOnly yes
+  LogLevel FATAL
+
 Host cw-puppet-test
   HostName 127.0.0.1
   User vagrant
@@ -745,3 +766,6 @@ Host cw-puppet-test
   IdentitiesOnly yes
   LogLevel FATAL
 
+Host simply_add_water
+  HostName lanpartei.de
+  Port 22154
