--- a/.gitconfig
+++ b/.gitconfig
@@ -57,3 +57,8 @@
 	tool = meld
 [interactive]
   singlekey = true
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
