more hosts from work

--- a/.ssh/config
+++ b/.ssh/config
@@ -5,8 +5,24 @@ Host fellmann
   User tails
 
 
+Host bestmade.staging
+  Hostname ec2-184-73-81-84.compute-1.amazonaws.com
+  ForwardAgent yes
+  User ubuntu
+  IdentityFile ~/.ssh/bestmade_old.key
+
 Host bitspire.de
   User niklashofer
+  IdentityFile ~/.ssh/bitspire
+
+Host git.bitspire.de
+  User niklas
+  IdentityFile ~/.ssh/bitspire
+
+Host runner.bitspire.de
+  HostName 46.252.25.158
+  Port 22044
+  User niklas
   IdentityFile ~/.ssh/bitspire
 
 Host hijabvibe.production
@@ -15,30 +31,24 @@ Host hijabvibe.production
   IdentityFile ~/.ssh/bitspire
 
 Host finanzenverlag.staging2
-  HostName 35.157.100.54
+  HostName ec2-35-157-100-54.eu-central-1.compute.amazonaws.com
   User app
   IdentityFile ~/.ssh/bitspire
   ForwardAgent yes
 
-Host finanzenverlag.staging3
-  HostName 52.59.226.172
-  User app
-  IdentityFile ~/.ssh/bitspire
-  ForwardAgent yes
-
-
-Host finanzenverlag.production1
-  HostName ec2-54-93-187-132.eu-central-1.compute.amazonaws.com
-  User app
-  IdentityFile ~/.ssh/bitspire
 
 Host finanzenverlag.production2
-  HostName ec2-35-156-179-69.eu-central-1.compute.amazonaws.com
+  HostName ec2-52-59-206-121.eu-central-1.compute.amazonaws.com
   User app
   IdentityFile ~/.ssh/bitspire
 
 Host finanzenverlag.production3
   HostName ec2-52-59-206-32.eu-central-1.compute.amazonaws.com
+  User app
+  IdentityFile ~/.ssh/bitspire
+
+Host finanzenverlag.productioncruncher
+  HostName ec2-35-156-179-69.eu-central-1.compute.amazonaws.com
   User app
   IdentityFile ~/.ssh/bitspire
 
