--- a/.ssh/config
+++ b/.ssh/config
@@ -76,6 +76,7 @@ Host lianeum.lanpartei.de
   Port 22125
 
 Host git.lanpartei.de
+  IdentityFile ~/.ssh/pandur.key
   HostName lanpartei.de
   User niklas
   Port 22109
@@ -777,5 +778,10 @@ Host cw-puppet-test
   LogLevel FATAL
 
 Host simply_add_water
+  User saw
+  HostName lanpartei.de
+  Port 22154
+Host georgerrmarkov
+  User grrm
   HostName lanpartei.de
   Port 22154
