--- a/.ackrc
+++ b/.ackrc
@@ -2,7 +2,7 @@
 --type-set=haml=.haml
 --type-set=yaml=.yaml,.yml
 --type-set=puppet=.pp
---type-set=ruby=.rb,.erb,.rake,.haml
+--type-set=ruby=.rb,.erb,.rake,.haml,.feature
 --type-set=coffeescript=.coffee
 --type-set=sass=.scss,.sass
 --type-set=markdown=.md,.markdown
@@ -11,6 +11,7 @@
 --type-set=emblem=.emblem
 --type-set=elm=.elm
 --type-set=js=.js
+--type-set=c=.h,.c,.cpp,.cs
 --type-set=log=.log
 --ignore-dir=public/upload/images/
 --ignore-dir=coverage/
