--- a/.i3/config
+++ b/.i3/config
@@ -30,7 +30,7 @@ font pango:Inconsolata 7
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec ~/bin/t
 
 # kill focused window
 bindsym $mod+Shift+q kill
