use inconsolata font in i3bar

--- a/.i3/config
+++ b/.i3/config
@@ -165,6 +165,7 @@ bar {
         status_command i3blocks
         tray_output primary
         position top
+        font pango:Inconsolata 9
 }
 workspace_auto_back_and_forth yes
 
