--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,7 @@
-Host heimlich
+Host halmor
+  Hostname halmor.local
   User pi
+
 Host fellmann
   HostName fellmann.dtdns.net
   User tails
@@ -69,6 +71,14 @@ Host minecraft.lanpartei
   HostName lanpartei.de
   User minecraft
   Port 22147
+
+#  SHA256:1e+ZMDhlzDPjEYKCQuyByBqAH4F7PsNQm07Q0xEF0WM.
+#  MD5:6b:2e:f5:02:8f:4a:dc:ee:28:c5:3e:db:83:08:69:41
+Host factorio.lanpartei
+  HostName lanpartei.de
+  User factorio
+  Port 22197
+  FingerprintHash md5
 
 Host lianeum.lanpartei.de
   HostName lanpartei.de
@@ -198,20 +208,22 @@ Host betazett
    HostName 194.25.172.137
    IdentityFile ~/.ssh/pandur.key
 
-Host new.into-sa.com
+Host intosa.main
    HostName 89.238.84.42
    User niklas
    IdentityFile ~/.ssh/pandur.key
 
-Host old.into-sa.com
-   HostName lanpartei.de
+Host intosa
+   HostName 89.238.84.42
    User intosa
    Port 22123
+   IdentityFile ~/.ssh/pandur.key
 
-Host staging.into-sa.com
-   HostName www.into-sa.com
+Host intosa.staging
+   HostName 89.238.84.42
    User intosa
    Port 22223
+   IdentityFile ~/.ssh/pandur.key
 
 Host vm
    User oneric
@@ -629,7 +641,7 @@ Host vm-cataract
    Port 22147
    IdentityFile ~/.ssh/pandur.key
 
-Host vm-social
+Host social.lanpartei.de
    HostName lanpartei.de
    User social
    Protocol 2
@@ -781,7 +793,15 @@ Host simply_add_water
   User saw
   HostName lanpartei.de
   Port 22154
+Host simply_add_water.staging
+  User saw
+  HostName lanpartei.de
+  Port 22155
 Host georgerrmarkov
   User grrm
+  HostName lanpartei.de
+  Port 22154
+Host hpsot
+  User hpsot
   HostName lanpartei.de
   Port 22154
