always use our key for vms

--- a/.ssh/config
+++ b/.ssh/config
@@ -118,6 +118,9 @@ Host puppetdashboard.lanpartei
 Host wigowyr
    HostName wigowyr.local
 
+Host *.lanpartei.de
+   IdentityFile ~/.ssh/pandur.key
+
 Host worachi
    IdentityFile ~/.ssh/pandur.key
 
