i3blocks config from tywrath

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -1,42 +1,55 @@
 separator_block_width=15
 
+[fan]
+command=sensors thinkpad-isa-0000 | awk '/^fan1/ { printf "%d ☸", $2 }'
+interval=10
+separator=false
+
+[temp]
+command=sensors thinkpad-isa-0000 | awk '/^temp1/ { print $2 }'
+interval=10
+
+[brightness]
+command=~/bin/i3blocks/brightness
+signal=10
+
 [volume]
 command=~/bin/i3blocks/volume
 signal=10
 
 [memory]
-command=/usr/local/libexec/i3blocks/memory
+command=/usr/share/i3blocks/memory
 separator=false
 interval=30
 
-[swap]
-command=/usr/local/libexec/i3blocks/memory swap
-interval=30
-
-[disk-root]
-command=/usr/local/libexec/i3blocks/disk /
-interval=30
+#[swap]
+#command=/usr/share/i3blocks/memory swap
+#interval=30
 
 [disk-home]
-command=/usr/local/libexec/i3blocks/disk $HOME
+command=/usr/share/i3blocks/disk $HOME
 interval=30
 
 [wireless]
-command=/usr/local/libexec/i3blocks/network wlp3s0 W
+command=/usr/share/i3blocks/network wlp3s0 W
 color=#00FF00
 interval=10
 
 [ethernet]
-command=/usr/local/libexec/i3blocks/network enp9s0 E
+command=/usr/share/i3blocks/network enp9s0 E
 color=#00FF00
 interval=10
 
+#[vpn]
+#command=~/bin/i3blocks/openvpn -p /run/openvpn.*.pid
+#interval=10
+
 [cpu]
-command=/usr/local/libexec/i3blocks/cpu
+command=/usr/share/i3blocks/cpu
 interval=10
 
 [battery]
-command= /usr/local/libexec/i3blocks/battery BAT1
+command= /usr/share/i3blocks/battery BAT1
 interval=30
 
 [time]
