--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -6,7 +6,7 @@ interval=10
 separator=false
 
 [temp]
-command=sensors thinkpad-isa-0000 | awk '/^temp1/ { print $2 }'
+command=sensors coretemp-isa-0000 | awk '/^Core 1/ { print $3 }'
 interval=10
 
 [brightness]
@@ -30,13 +30,23 @@ interval=30
 command=/usr/share/i3blocks/disk $HOME
 interval=30
 
+[interfaces]
+command=/usr/share/i3blocks/iface
+interval=10
+
 [wireless]
-command=/usr/share/i3blocks/network wlp3s0 W
-color=#00FF00
+label=📻
+command=/usr/share/i3blocks/wifi
+instance=wlp3s0
 interval=10
 
 [ethernet]
 command=/usr/share/i3blocks/network enp9s0 E
+color=#00FF00
+interval=10
+
+[ethernet]
+command=/usr/share/i3blocks/network enp0s31f6 E
 color=#00FF00
 interval=10
 
@@ -45,11 +55,20 @@ interval=10
 #interval=10
 
 [cpu]
-command=/usr/share/i3blocks/cpu
+label=⚙
+command=/home/niklas/bin/i3blocks/cpu_usage 8
 interval=10
 
 [battery]
-command= /usr/share/i3blocks/battery BAT1
+label=⚡
+command=/home/niklas/bin/i3blocks/battery 5
+instance=0
+interval=30
+
+[battery]
+label=⚡
+command=/home/niklas/bin/i3blocks/battery
+instance=1
 interval=30
 
 [time]
