--- a/.i3/config
+++ b/.i3/config
@@ -154,8 +154,8 @@ bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 5 && pkill -USR
 bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10 && pkill -USR1 i3blocks
 bindsym XF86AudioMicMute exec pactl set-source-mute 1 toggle && pkill -USR1 i3blocks
 #bindsym XF86WLAN exec --no-startup-id amixer -- sset Mic toggle
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -- -5% && pkill -USR1 i3blocks
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 -- +5% && pkill -USR1 i3blocks
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% && pkill -USR1 i3blocks
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% && pkill -USR1 i3blocks
 bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle && pkill -USR1 i3blocks
 bindsym $mod+Shift+L exec ~/bin/lock_screen
 
