--- a/.i3/config
+++ b/.i3/config
@@ -30,7 +30,7 @@ font pango:Inconsolata 7
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec ~/bin/t
+bindsym $mod+Return exec t
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -260,7 +260,7 @@ exec --no-startup-id synclient TapButton2=0
 # no composition because chrome makes sprite party
 #exec compton -b --backend glx --paint-on-overlay
 exec xmodmap /home/niklas/.Xmodmap
-exec --no-startup-id /home/niklas/bin/wallpaper
+exec --no-startup-id wallpaper
 
 # turn of coasting when scrolling with touchpad. Stop immediately
 # else: 1) scroll fast 2) stop touching pad 3) press ctrl (in browser) => zoom
@@ -268,6 +268,8 @@ exec --no-startup-id xinput set-float-prop "SynPS/2 Synaptics TouchPad" "Synapti
 exec --no-startup-id blueman-applet
 exec --no-startup-id seafile-applet
 exec --no-startup-id xfce4-clipman
+
+exec --no-startup-id ls ~/.bm* | entr ~/bin/tools/shortcuts
 
 # Start autocutsel to sync clipboards
 # 2014-01-03 annoying, cannot enter URLs on RTM, autoselecting fields overwrite selection
