--- a/.i3/config
+++ b/.i3/config
@@ -157,7 +157,7 @@ bindsym XF86AudioMicMute exec pactl set-source-mute 1 toggle && pkill -USR1 i3bl
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% && pkill -USR1 i3blocks
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% && pkill -USR1 i3blocks
 bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle && pkill -USR1 i3blocks
-bindsym $mod+Shift+L exec ~/bin/lock_screen
+bindsym $mod+Shift+L exec lock_screen
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
