--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -10,11 +10,11 @@ command=sensors coretemp-isa-0000 | awk '/^Core 1/ { print $3 }'
 interval=10
 
 [brightness]
-command=~/bin/i3blocks/brightness
+command=~/bin/dotfiles/i3blocks/brightness
 signal=10
 
 [volume]
-command=~/bin/i3blocks/volume
+command=~/bin/dotfiles/i3blocks/volume
 signal=10
 
 [memory]
@@ -40,34 +40,24 @@ command=/usr/share/i3blocks/wifi
 instance=wlp3s0
 interval=10
 
-[ethernet]
-command=/usr/share/i3blocks/network enp9s0 E
-color=#00FF00
-interval=10
-
-[ethernet]
-command=/usr/share/i3blocks/network enp0s31f6 E
-color=#00FF00
-interval=10
-
 #[vpn]
-#command=~/bin/i3blocks/openvpn -p /run/openvpn.*.pid
+#command=~/bin/dotfiles/i3blocks/openvpn -p /run/openvpn.*.pid
 #interval=10
 
 [cpu]
 label=⚙
-command=/home/niklas/bin/i3blocks/cpu_usage 8
+command=/home/niklas/bin/dotfiles/i3blocks/cpu_usage 8
 interval=10
 
 [battery]
 label=⚡
-command=/home/niklas/bin/i3blocks/battery 5
+command=/home/niklas/bin/dotfiles/i3blocks/battery 5
 instance=0
 interval=30
 
 [battery]
 label=⚡
-command=/home/niklas/bin/i3blocks/battery
+command=/home/niklas/bin/dotfiles/i3blocks/battery
 instance=1
 interval=30
 
