Setup ranger from Luke Smoth's voidrice.

--- a/.gitignore
+++ b/.gitignore
@@ -1,203 +1,3 @@
-# used for bin/Backup
-dotfiles
-Downloads/
-Videos/
-Music/
-Ubuntu One/
-_legacy/
-.ICEauthority
-.Private
-.Xauthority*
-.xsession-errors
-.xsession-errors.old
-.thumbnails/
-.thumbs/
-thumbs/
-.xvpics/
-.pulse
-.cache/
-.compiz-1/
-.dbus/
-.dmrc
-.ecryptfs
-.fontconfig/*cache*
-.pulse-cookie
-.esd_auth
-.synaptic
-.macromedia/
-*Cache*
-*cache*
-*.lock
-*.lck
-lock
-*.swp
-*.swo
-*.pyc
-.vimmate_ignore
-tags
-.alsoftrc
-.bluetilerc
-*.log
-*.log.1
-*.out
-*.err
-.goutputstream*
-!.vimgolf/put/*.log
-.mozilla/
-.vim-git/
-.vim-auto/
-zeitgeist/activity.sqlite*
-.local/share/gvfs-metadata
-.local/share/webkit/icondatabase
-.local/share/zeitgeist
-.config/dconf/user
-yankring_history_v2.txt
-SweetHome3D-*
-.libreoffice
-.clipboard
-.pgadmin3
-.sqlite_history
-.mlocate.db
-tmp
-temp
-Temp
-logs/
-log/
-Steam
-Ableton
-Mail
-src
-rails/*
-!rails/*tbz2
-!rails/*tgz
-Dropbox
-.dropbox*
-net/
-doc/
-doc-*/
-.secret_encfs/
-secret/
-.VirtualBox/HardDisks
-VirtualBox\ VMs
-__MACOSX
-.local/share/ubuntuone/syncdaemon
-.rvm
-.gem/specs/
-.config/google-chrome/
-.pki
-work/xunde
-unindexed_Music/
-rails
-src
-secret
-Music/
-.lolcommits/
-work
-puppet/lanpartei/
-.spring
-.VirtualBox/*.log
-.VirtualBox/*.log.*
-lanpartei/vm-oneric-puppet.tbz2
-.purple/icons/
-Games
-.subversion/
-.techniclauncher
-.rpmdb/
-.minecraft/
-.quakelive/
-.mysql_history
-.local/share/Trash/
-.config/transmission/
-.config/libreoffice/
-.config/google-googletalkplugin/
-.config/evolution/
-.config/compiz-1
-.config/chromium
-.chromedriver-helper/
-.compiz
-.gimp-2.8/
-.ghc/ghci_history
-.local/share
-.limbo
-ruby/selecta/
-arduino/jarltech/
-Documents/**/*.dvi
-Documents/**/*.aux
-Documents/**/*.log
-.config/evince/
-.config/google-chrome-unstable/
-.config/nautilus/accels
-.config/unity3d/Squad/
-.ftblauncher/
-.java/fonts/
-.kde
-minecraft/hurlg/
-ruby/karlinator/
-puppet/puppet-nfs/
-ruby/minecraft-file-landscape/
-ruby/kindle/
-.zcompdump
-.texmf-var/
-.gconf/apps/foxtrotgps/
-.java/.userPrefs
-.steampid
-.steampath
-.steam
-.rnd
-.purple/otr.instance_tags
-.speech-dispatcher/
-work/xunde/puppet
-work/xunde/heutekaufen
-work/xunde/siewert-kau
-.xinitrc-loaded
-.mplayer
-.viminfo
-.ssh/known_hosts.old
-.pry_history
-.nvidia-settings-rc
-.viminfo
-.psql_history
-.mission-control
-.mission-control
-.local/share/mime
-.local/share/mime
-.local/share/byobu/.ssh-agent
-.local/share/gnome-do/relevance8
-.local/share/gsettings-data-convert
-.local/share/recently-used.xbel
-.links2/links.his
-.lftp/rl_history
-.lesshst
-.irb-history
-.gstreamer-0.10/registry.x86_64.bin
-.gnupg/pubring.gpg~
-.gnupg/random_seed
-.config/chromium
-.gnome2/accels/nautilus
-.gitk
-.VirtualBox/VBoxSVC.log
-.VirtualBox/VBoxSVC.log.1
-.VirtualBox/VBoxSVC.log.2
-.VirtualBox/VBoxSVC.log.3
-.VirtualBox/VBoxSVC.log.4
-.VirtualBox/VBoxSVC.log.5
-.VirtualBox/VBoxSVC.log.6
-.VirtualBox/VBoxSVC.log.7
-.VirtualBox/VBoxSVC.log.8
-.VirtualBox/VBoxSVC.log.9
-.VirtualBox/VBoxSVC.log.10
-.config/Trolltech.conf
-.config/htop/htoprc
-.config/monitors.xml
-.config/monitors.xml.bak
-.VirtualBox
-.aptitude/config
-.config/compiz-1
-.config/google-googletalkplugin
-.config/pavucontrol.ini
-.config/software-center/softwarecenter.cfg
-.config/totem/state.ini
-.config/gtk-2.0/gtkfilechooser.ini
-.config/monitors.xml.backup
-.config/vlc/vlc-qt-interface.conf
-.gconf/apps/evolution/calendar/%gconf.xml
+.config/ranger/bookmarks
+.config/ranger/history
+.config/ranger/tagged
