ranger shortcut: ,du to hae a cheap ncdu

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -215,6 +215,7 @@ map dU shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map yp shell -f echo -n %%d/%%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %%d     | xsel -i; xsel -o | xsel -i -b
 map yn shell -f echo -n %%f     | xsel -i; xsel -o | xsel -i -b
+map ,du chain mark_files all=True val=True; get_cumulative_size; set sort=size; set sort_reverse=False; mark_files all=True val=False
 
 
 # Filesystem Operations
